// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> Snaphot must match circleBadgeLargeImage 1`] = `
<a
  className="float-left mr-2 CircleBadge CircleBadge--large"
  href="href"
  title="title"
>
  <img
    alt=""
    className="CircleBadge-icon"
    src="https://user-images.githubusercontent.com/334891/30004619-adc8ca86-90a0-11e7-8ccc-2322261d2ab1.png"
  />
</a>
`;

exports[`<Avatar /> Snaphot must match circleBadgeMediumImage 1`] = `
<a
  className="float-left mr-2 CircleBadge CircleBadge--medium"
  href="href"
  title="title"
>
  <img
    alt=""
    className="CircleBadge-icon"
    src="https://user-images.githubusercontent.com/334891/30004619-adc8ca86-90a0-11e7-8ccc-2322261d2ab1.png"
  />
</a>
`;

exports[`<Avatar /> Snaphot must match circleBadgeSmallImage 1`] = `
<a
  className="float-left mr-2 CircleBadge CircleBadge--small"
  href="href"
  title="title"
>
  <img
    alt=""
    className="CircleBadge-icon"
    src="https://user-images.githubusercontent.com/334891/30004619-adc8ca86-90a0-11e7-8ccc-2322261d2ab1.png"
  />
</a>
`;
